clusters/main/kubernetes/system/networkpolicies/app/paperless-allow-ingress-gatus-internal.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-gatus-internal
  namespace: paperless
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: paperless
      app.kubernetes.io/name: paperless-ngx
      pod.name: main
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gatus
            k8s:app.kubernetes.io/instance: gatus
            k8s:app.kubernetes.io/name: gatus
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
